# termy-itd

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/: __init__.py  cache.py  main.py  storage.py
app/css/: carousel.tcss  comment.tcss  home.tcss  login.tcss  notification.tcss  post.tcss  repost.tcss  search.tcss  style.tcss  user.tcss
app/dialogs/: __init__.py  about.py  carousel.py  confirm.py  repost.py
app/screens/: __init__.py  base.py  home.py  login.py  notifications.py  post.py  search.py  user.py
app/widgets/: __init__.py  comment.py  notification.py  post.py  shared.py
