[project]
name = "termy-itd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "itd-sdk==2.4.2",
    "pyperclip>=1.11.0",
    "textual>=8.2.7",
    "textual-englyph>=0.5.4",
    "textual-image>=0.12.0",
    "textual-imageview>=0.1.1",
]

[project.optional-dependencies]
speedup = [
    "textual-speedups>=0.2.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "uv"
major_version_zero = true

[tool.uv.sources]
itd-sdk = { git = "https://github.com/itd-sdk/itd-sdk" }

[tool.ruff]
line-length = 160
ignore = ["COM", "D300", "E501"]

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true
