[build-system]
requires = ["uv_build~=0.11"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = 'app'
module-root = ''

[project]
name = "termy-itd"
version = "0.1.0.dev1"
description = "Terminal client for итд.com"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "humanize>=4.16.0",
    "itd-sdk==2.4.4",
    "pyperclip>=1.11.0",
    "textual>=8.2.7",
    "textual-dev>=1.8.0",
    "textual-englyph>=0.5.4",
    "textual-image==0.12.0",
    "textual-imageview>=0.1.1",
]

[tool.uv.sources]
itd-sdk = { git = "https://github.com/itd-sdk/itd-sdk" }
textual-image = { git = "https://github.com/lnqs/textual-image" }

[tool.ruff]
line-length = 160
ignore = ["COM", "D300", "E501"]

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true
